<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addProductBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="20dp"
    tools:context=".AddProductActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addProductHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:imeOptions="actionNext"
            android:minWidth="20dp"
            android:singleLine="true"
            android:text="@string/add_product"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:minWidth="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/productCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/bar_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:minWidth="20dp"
                android:singleLine="true" />

            <AutoCompleteTextView
                android:id="@+id/productCategoryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:completionThreshold="1"
                android:hint="@string/category"
                android:minWidth="20dp" />

            <EditText
                android:id="@+id/productNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/name"
                android:minWidth="20dp" />

            <Button
                android:id="@+id/addPhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:minWidth="20dp"
                android:text="@string/add_photo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:minWidth="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/productPhotoImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight=".3"
                    android:minWidth="20dp">

                </ImageView>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="20dp"
            android:text="@string/add_product" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>