<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPurchaseBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <TextView
        android:id="@+id/addPurchaseHeaderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_horizontal"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:text="@string/add_purchases"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="136dp"
        android:text="@string/sale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPurchaseHeaderTextView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:layout_editor_absoluteX="-16dp">

        <ScrollView
            android:id="@+id/purchaseScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/purchaseLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="200px"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addPurchaseItemButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="+" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addPurchaseButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <AutoCompleteTextView
            android:id="@+id/purchaseStoreEditText"
            android:completionThreshold="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20px"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/store"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/purchaseDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/pick_date"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/addPurchaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_purchases"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>